[package]
authors = ["josh rotenberg <joshrotenberg@gmail.com>"]
edition = "2018"
license = "MIT"
name = "mdbook-blog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33.1"
mdbook = "0.4.7"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
